# notes

./: .gitignore  README.md  clear.sh  compile.sh  index.html  new.sh  notes.json
.github/workflows/: delete-deployments.yml
compiler/: Cargo.toml
compiler/src/: args.rs  git.rs  main.rs  utils.rs
compiler/src/compiler/: course.rs  document.rs  latex.rs  mod.rs  page.rs  snippet.rs  typst.rs  universe.rs
math/EulerFormula/: EulerFormula.tex
math/RiemannHypothesis/: .gitignore  RiemannHypothesis.tex
math/TaylorSeries/: TaylorSeries.tex
notes/Blockchain/: Blockchain.tex
notes/Boolean/: Boolean.tex
notes/Bytecode/: Bytecode.tex
notes/CategoryTheory/: CategoryTheory.tex
notes/Chemistry/: Chemistry.tex
notes/Compiler/: Compiler.tex
notes/ComplexAnalysis/: ComplexAnalysis.tex
notes/ComplexNumbers/: ComplexNumbers.tex
notes/DeepLearning/: DeepLearning.tex
notes/DifferentialEquations/: DifferentialEquations.tex
notes/Differentiation/: Differentiation.tex
notes/DiffieHellman/: DiffieHellman.tex
notes/EllipticCurveCriptography/: EllipticCurveCriptography.tex  EllipticCurveCryptography.tex
notes/EllipticCurveCryptography/: EllipticCurveCryptography.tex
notes/EulerFormula/: EulerFormula.tex
notes/EulerMascheroni/: EulerMascheroni.tex
notes/FluidStatics/: FluidStatics.tex
notes/FourierAnalysis/: FourierAnalysis.tex
notes/Functions/: Functions.tex
notes/Graphs/: Graphs.tex
notes/GroupTheory/: GroupTheory.tex
notes/GroversAlgorithm/: GroversAlgorithm.tex
notes/HilbertSpace/: HilbertSpace.tex
notes/Integers/: Integers.tex
notes/Integration/: Integration.tex  bettelini.sty
notes/Limits/: Limits.tex
notes/Logic/: Logic.tex
notes/Mandelbrot/: Mandelbrot.tex
notes/Matrices/: Matrices.tex
notes/MerkleTree/: MerkleTree.tex
notes/Misc/: Misc.tex
notes/MongoDB/: MongoDB.tex
notes/Music/: Music.tex
notes/MusicNotation/: MusicNotation.tex
notes/NetwonsMethod/: NetwonsMethod.tex
notes/Networking/: Networking.tex
notes/PHP/: PHP.tex
notes/QuantumComputing/: QuantumComputing.tex
notes/RSA/: RSA.tex
notes/Radiation/: Radiation.tex
notes/Regex/: Regex.tex
source/: README.md  compile  compile_changes  compile_latex_wildcard  compile_wildcard  resources.md  try_pull_and_compile
stellar/: README.md  compile  compile_last_pull  info.txt
stellar/source/complexplane/: Cargo.toml
stellar/source/complexplane/src/: complexplane.rs  lib.rs
stellar/source/complexplane/website/www/: complexplane.html  index.html
(+1094 files in other folders)
