[package]
name = "compiler"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.8", features = ["derive"] }
env_logger = "0.11.3"
log = "0.4.22"
regex = "1.10.5"
tempdir = "0.3.7"
tokio = { version = "1.38.0", features = ["full"] }

stellar-pdfformat = { git = "https://github.com/paolobettelini/stellar" }
stellar-database = { git = "https://github.com/paolobettelini/stellar" }
git2 = "0.19.0"
