[package]
name = "compiler"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.8", features = ["derive"] }
env_logger = "0.11"
log = "0.4"
regex = "1.12"
tempdir = "0.3.7"
tokio = { version = "1.38.0", features = ["full"] }
git2 = "0.21"

stellar-pdfformat = { git = "https://github.com/paolobettelini/stellar" }
stellar-database = { git = "https://github.com/paolobettelini/stellar" }
stellar-import = { git = "https://github.com/paolobettelini/stellar" }
