[package]
name = "complexplane"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[profile.release]
# This makes the compiled code faster and smaller, but it makes compiling slower,
# so it's only enabled in release mode.
lto = true

[dependencies]
# The `wasm-bindgen` crate provides the bare minimum functionality needed
# to interact with JavaScript.
wasm-bindgen = "0.2.83"
wasm-bindgen-futures = "0.4.32"
async-std = { version = "1.10.0", features = ["unstable"] }
nannou = { version="0.18.1", git ="https://github.com/nannou-org/nannou.git", features =["wasm-experimental"]}
lazy_static = "1.4.0"


# The `web-sys` crate allows you to interact with the various browser APIs,
# like the DOM.
[dependencies.web-sys]
version = "0.3.22"
features = ["console"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so it's only enabled
# in debug mode.
[target."cfg(debug_assertions)".dependencies]
console_error_panic_hook = "0.1.5"

# # These crates are used for running unit tests.
[dev-dependencies]
wasm-bindgen-test = "0.3.33"
futures = "0.1.27"
js-sys = "0.3.22"
